# medical-chatbot-llama2

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: standard.yml
src/: template.py
src/common/: my_first_script.py
src/medical-chatbot/: .gitignore  app.py  setup.py  store_index.py
src/medical-chatbot/research/: llama2-mchat.ipynb
src/medical-chatbot/src/: helper.py
src/medical-chatbot/templates/: chat.html
tests/: test_my_first_script.py
